--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/VadimDez/ngx-online-status/issues"
   },
-  "homepage": "https://github.com/VadimDez/ngx-online-status#readme"
+  "homepage": "https://github.com/VadimDez/ngx-online-status#readme",
+  "dependencies": {
+    "@angular/core": "^5.0.3"
+  }
 }
