--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "url": "https://github.com/VadimDez/ngx-online-status/issues"
   },
   "homepage": "https://github.com/VadimDez/ngx-online-status#readme",
-  "dependencies": {
+  "peerDependencies": {
+    "@angular/core": "^5.2.0"
+  },
+  "devDependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -45,9 +48,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.19",
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
