--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
     - name: npm install and test
       run: |
         npm install
-        npm run test
+        npm run test:ci
       env:
         CI: true
