--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test --watch=false",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCustom",
     "test:watch": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -63,6 +64,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
+    "puppeteer": "^5.5.0",
     "rxjs": "~6.4.0",
     "ts-node": "~7.0.0",
     "tslib": "^1.9.0",
