upgrade to latest ng 8

--- a/package.json
+++ b/package.json
@@ -35,22 +35,20 @@
     "url": "https://github.com/VadimDez/ngx-online-status/issues"
   },
   "homepage": "https://github.com/VadimDez/ngx-online-status#readme",
-  "peerDependencies": {
-    "@angular/core": ">=5.2.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/animations": "~8.0.1",
-    "@angular/cli": "~8.0.3",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/compiler-cli": "~8.0.1",
-    "@angular/core": "~8.0.1",
-    "@angular/forms": "~8.0.1",
-    "@angular/language-service": "~8.0.1",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/router": "~8.0.1",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "~8.2.14",
+    "@angular/cli": "~8.3.29",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -64,11 +62,11 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "puppeteer": "^5.5.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.6.7",
     "ts-node": "~7.0.0",
     "tslib": "^1.9.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "$schema": "./node_modules/ng-packagr/package.schema.json",
