--- a/package.json
+++ b/package.json
@@ -37,37 +37,34 @@
   "homepage": "https://github.com/VadimDez/ngx-online-status#readme",
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/animations": "~8.2.14",
-    "@angular/cli": "~8.3.29",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "puppeteer": "^5.5.0",
-    "rxjs": "~6.6.7",
-    "ts-node": "~7.0.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "@angular-devkit/build-angular": "~13.3.7",
+    "@angular/animations": "~13.3.0",
+    "@angular/cli": "~13.3.7",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/language-service": "~13.3.10",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "protractor": "~7.0.0",
+    "puppeteer": "~14.1.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.6.2",
+    "zone.js": "~0.11.4"
   },
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "ngPackage": {
