--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p package.json",
-    "docs": "ng build --configuration production --output-path docs --base-href ngx-online-status && cp ./docs/index.html ./docs/404.html"
+    "docs": "ng build --configuration production --output-path docs --base-href ngx-online-status && cp ./docs/index.html ./docs/404.html",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": false,
   "repository": {
@@ -35,7 +37,6 @@
     "url": "https://github.com/VadimDez/ngx-online-status/issues"
   },
   "homepage": "https://github.com/VadimDez/ngx-online-status#readme",
-  "peerDependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.7",
     "@angular/animations": "~13.3.0",
@@ -49,9 +50,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@cypress/schematic": "^1.7.0",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^12.11.1",
+    "cypress": "latest",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.0",
@@ -59,8 +62,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "protractor": "~7.0.0",
-    "puppeteer": "~14.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typescript": "~4.6.2",
