--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:watch": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p package.json",
+    "packagr": "ng-packagr -p ng-package.json",
     "docs": "ng build --configuration production --output-path docs --base-href ngx-online-status && cp ./docs/index.html ./docs/404.html",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
@@ -62,15 +62,10 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
-  },
-  "$schema": "./node_modules/ng-packagr/package.schema.json",
-  "ngPackage": {
-    "lib": {
-      "entryFile": "public_api.ts"
-    }
   }
 }
